# lab-works-sem2

./: .gitignore  LICENSE
files/: russian_demography_break.csv
object_oriented_programming/list/: CMakeLists.txt  list.cpp  list.h  main.cpp  test.cpp  test.h
programing_basics/CSVReader/: CMakeLists.txt  error.cpp  error.h  graphic.cpp  graphic.h  logic.cpp  logic.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  metrics.cpp  metrics.h  model.cpp  model.h  reader.cpp  reader.h  sort.cpp  sort.h  strings.cpp  strings.h  table.cpp  table.h
programing_basics/build-calculator-Desktop-Debug/: CMakeCache.txt  Makefile  calculator  cmake_install.cmake  qtcsettings.cmake
programing_basics/build-calculator-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-3690a3b986eab1240406.json  index-2023-03-16T09-39-05-0449.json  (+2 more)
programing_basics/build-calculator-Desktop-Debug/.qt/: QtDeploySupport.cmake
programing_basics/build-calculator-Desktop-Debug/.qtc_clangd/: compile_commands.json
programing_basics/build-calculator-Desktop-Debug/calculator_autogen/: moc_predefs.h
programing_basics/build-calculator-Desktop-Debug/calculator_autogen/EWIEGA46WW/: moc_calculator.cpp  moc_calculator.cpp.d
programing_basics/build-calculator-Desktop-Debug/calculator_autogen/include/: ui_calculator.h
programing_basics/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  main.cpp  operations.cpp  operations.h  qt_objects_operations.cpp  qt_objects_operations.h  strings.cpp  strings.h  utility.cpp  utility.h
stylesheets/: Combinear.qss
(+291 files in other folders)
